--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server/server.js",
     "server": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
